# NotesMinimalist

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.DB40E0A49BE1FA3C.idx  menu.cpp.B6D7A7EBB714B952.idx  menu.h.9FE3D5C6CCF6B0C3.idx  notes_drawing.cpp.059C662C56AD7F34.idx  notes_drawing.h.44A1077242E691A0.idx  notes_menu.cpp.29FC3ECC0359F820.idx  notes_menu.h.BB9EFBB00EE46EB0.idx
app/: main.cpp
include/components/: input_note.h
include/menu/: menu.h
include/notesdrawing/: notes_drawing.h
include/notesmenu/: notes_menu.h
src/: input_note.cpp  menu.cpp  notes_drawing.cpp  notes_menu.cpp
